singapore flag added